--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 
 body {background-image: url("background.jpg"); text-align:center;  padding:85px 0;}
 h {
-    color: white;
+    color: blue;
     text-align: center;
 }
 
 p {
-    font-family: Jokerman;
+    font-family: verdana;
     font-size: 20px;
 }
 /* The Modal (background) */
